# Noise

./: .gitignore  CLAUDE.md  CMakeLists.txt  Noise.sln
PerlinNoise/: PerlinNoise.vcxproj  PerlinNoise.vcxproj.filters
PerlinNoise/Images/: testImage.ppm
PerlinNoise/src/: Image.cpp  Image.h  PerlinNoise.cpp  PerlinNoise.h  main.cpp  vec3.h
